fixtures/benchmark/negatives/n19.ts
const replacementForDocs = `gemini-2.0-flash`;
